# strawberry-channels-demo

./: .gitignore  manage.py  pyproject.toml
api/: schema.py
berry/: asgi.py  settings.py  urls.py  wsgi.py
chat/: consumer.py
